tests/gabc-dump/should-fail/bad_translation_centering.gabc
name: bad translation centering;
%%
(c4) ab(ab) cd[/](cd)
